--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,5 +1,5 @@
 
-@font-face{
-    font-family:"Roboto";
-    src:'../fonts/Roboto/Roboto-Light.ttf';
-}
+@font-face {
+    font-family: "Roboto";
+    src: url('../fonts/Roboto/Roboto-Regular.ttf');
+    }
