adjustt styling of header

--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,22 @@
 /* importing css variables */
 @import url(./partials/variables.css);
 
+@import url(./partials/global.css);
 
 /* Navigation bar */
 .header_area .main-menu .navbar .navbar-brand{
     padding: 0 2rem 0 5rem;
 }
 
-.header_area .main-menu .navbar{
-    padding: 1rem 20rem ;
+.header_area .main-menu .navbar .nav-home{
+    padding: 1rem 10rem;
+    font: normal 500 15px/2px var(--roboto);
+    text-transform: uppercase;
+    background: var(--gradient-color);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+
 }
 
 .header_area .main-menu .nav-item .nav-link{
@@ -34,3 +42,37 @@
     -webkit-text-fill-color: transparent;
     background-clip: text;
 }
+
+/* Banner/intro area */
+.site-main .site-banner {
+    background: url() no-repeat 0% 50%;
+}
+
+.site-main .site-banner .site-title h3{
+    padding-top: 35%;
+    font-weight: 500;
+}
+
+/*.site-main .site-banner .site-title h3::after{
+    content: " ";
+    height: 2px;
+    width: 18vw;
+    background: black;
+    display: inline-block;
+    margin-left: 5%;
+    transform: translateY(-10px);
+}*/
+
+.site-main .site-banner .site-title h1{
+    font-size: 5rem;
+}
+
+.site-main .site-banner .site-title h4{
+    font-size: 1.5rem;
+}
+
+.site-main .site-banner .banner-image > img{
+    padding: 7rem 0;
+    width: 90rem;
+}
+
