--- a/css/partials/global.css
+++ b/css/partials/global.css
@@ -49,3 +49,13 @@
     color: whitesmoke;
     box-shadow: var(--box-shadow);
 }
+
+p.para{
+    color: var(--text-color);
+    font: normal 500 16px/25px var(--roboto);
+}
+
+p.para-uncenter{
+    color: var(--text-color);
+    font: normal 500 16px/25px var(--roboto);
+}
