--- a/css/partials/_global.css
+++ b/css/partials/_global.css
@@ -1,10 +1,16 @@
+
+
+/* Global Classes */ 
+
 .title-text{
-    font: normal bold 50px/72px var(--roboto)
+    font: normal bold 35px/ 72px var(--roboto);
 }
 
 .text-uppercase{
     text-transform: uppercase;
 }
+
+/* Buttons */ 
 
 .button{
     padding: .8rem 2.2rem;
@@ -52,10 +58,18 @@
 
 p.para{
     color: var(--text-color);
-    font: normal 500 16px/25px var(--roboto);
+    font: normal 500 16px/ 25px var(--roboto);
 }
 
-p.para-uncenter{
-    color: var(--text-color);
-    font: normal 500 16px/25px var(--roboto);
+.font-roboto{
+    font-family: var(--roboto);
+}
+
+button:focus,
+button:active
+button:hover
+.btn:active,
+.btn.active{
+    outline: 0px !important;
+    box-shadow: none !important;
 }
