--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,40 @@
-/* importing fonts */
+
+/* import fonts from fonts.css file */ 
 @import url(./fonts.css);
 
-/* importing css variables */
-@import url(./partials/variables.css);
 
-@import url(./partials/global.css);
+/* css variables */ 
+@import url(./partials/_variables.css);
 
-/* Navigation bar ------------------------------------------------------------------------------------  */
+/* import global styling */ 
+@import url(./partials/_global.css);
+
+
+/* start navigation */ 
+
+
+
 .header_area .main-menu .navbar .navbar-brand{
-    padding: 0 2rem 0 5rem;
+    padding: 0 2rem 0 1rem;
+}
+
+.header_area .main-menu .navbar{
+    background:white;
+    box-shadow: var(--box-shadow);
+}
+
+.header_area .main-menu .navbar .navbar-trans {
+    transition: all 0.3s ease;
+}
+
+.header_area .main-menu .navbar .navbar-trans .afterscroll { 
+    background: rgba(230, 262, 272, 0.9);
+    Transition:0.3s all linear;
 }
 
 .header_area .main-menu .navbar .nav-home{
-    padding: 1rem 14rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     font: normal 500 15px/2px var(--roboto);
     text-transform: uppercase;
     background: var(--gradient-color);
@@ -20,6 +42,13 @@
     -webkit-text-fill-color: transparent;
     background-clip: text;
 }
+
+
+.header_area .main-menu .navbar{
+    padding: 1rem 20rem ;
+}
+
+
 
 .header_area .main-menu .nav-item .nav-link{
     font: normal 500 15px/2px var(--roboto);
@@ -42,57 +71,70 @@
     background-clip: text;
 }
 
-/* Banner/intro area ------------------------------------------------------------------------------------ */
+
+/* Banner Area */ 
+
 .site-main .site-banner {
     background: url() no-repeat 0% 50%;
+    padding-top: 17%;
+    
+    padding-left: 10%;
+    position: relative;
+}
+
+.site-main .site-banner .social{
+    padding-top: 9%;
+    padding-right: 10%;
+    text-align: right;
+    font-size:22px;
+    color: var(--border-color);
+    
 }
 
 .site-main .site-banner .site-title h3{
-    padding-top: 35%;
     font-weight: 500;
 }
 
-/*.site-main .site-banner .site-title h3::after{
-    content: " ";
-    height: 2px;
-    width: 18vw;
-    background: black;
-    display: inline-block;
-    margin-left: 5%;
-    transform: translateY(-10px);
-}*/
 
 .site-main .site-banner .site-title h1{
     font-size: 5rem;
+    color: var(--primary-color);
 }
 
 .site-main .site-banner .site-title h4{
     font-size: 1.5rem;
 }
 
-.site-main .site-banner .banner-image > img{
-    padding: 7rem 0;
-    width: 90rem;
+
+/* About Area */ 
+
+.site-main .about-area{
+    padding-top: 9%;
+    padding-bottom: 4%;
 }
 
-/* about me ------------------------------------------------------------------------------------ */
-.site-main .about-area{
-    padding: 8rem 5rem;
-}
 
 .site-main .about-area .about-title h2 > span{
     display: block;
-    font: normal bold 49px/60px var(--roboto);
+    font: normal bold 49px/ 60px var(--roboto);
+    letter-spacing: 21px;
 }
 
-.site-main .about-area .about-title .paragraph >p{
+.site-main .about-area .about-title .paragraph > p{
     padding: .4rem 0;
 }
 
-/* skills ------------------------------------------------------------------------------------ */
+.site-main .about-area .about-image{
+    padding-top: 7%;
+    padding-left: 10%;
+}
+
+
+/* Skills Area */ 
 
 .site-main .skills-area{
-    padding: 7rem 2rem;
+    padding-top: 10%;
+    padding-bottom: 4%;
 }
 
 .site-main .skills-area .skills-title{
@@ -101,17 +143,49 @@
 
 .site-main .skills-area .skills-title h1{
     font-size: 35px;
-    letter-spacing: 5px;
 }
 
-.site-main .skills-area .skills{
+.site-main > .skills-area .skills{
     background: rgba(230, 262, 272, 0.973);
     padding: 2rem 0;
     width: 16rem;
-    margin: 3rem .5rem;
+    margin: 5rem .5rem;
     transition: box-shadow .7s ease;
 }
 
-.site-main .skills-area .skills:hover{
+.site-main > .skills-area .skills:hover{
     box-shadow: var(--box-shadow);
 }
+
+
+/* Project Area */ 
+
+.site-main .project-area{
+    padding-left: 5%;
+    padding-top: 7%;
+}
+
+.site-main .project-area .button-group button{
+    background: transparent;
+    border: none;
+    font: normal 500 16px/130px var(--roboto);
+    text-transform: uppercase;
+}
+
+.site-main .project-area .button-group button + button{
+    padding-left: 3rem;
+}
+
+.site-main .project-area .grid .our-project > .title h4{
+    font: normal 700 25px/12px var(--roboto);
+}
+
+.site-main .project-area .grid .our-project .img a:hover img{
+    filter: brightness(1.1) drop-shadow(1px 8px 30px #b1afaf);
+}
+
+
+/* End Project Area */ 
+
+
+
