--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,10 @@
 
 
 /* css variables */ 
-@import url(./partials/_variables.css);
+@import url(./partials/variables.css);
 
 /* import global styling */ 
-@import url(./partials/_global.css);
+@import url(./partials/global.css);
 
 
 /* start navigation */ 
@@ -109,8 +109,8 @@
 /* About Area */ 
 
 .site-main .about-area{
-    padding-top: 9%;
-    padding-bottom: 4%;
+    padding-top: 8%;
+    padding-bottom: 6%;
 }
 
 
@@ -133,7 +133,7 @@
 /* Skills Area */ 
 
 .site-main .skills-area{
-    padding-top: 10%;
+    padding-top: 8%;
     padding-bottom: 4%;
 }
 
@@ -162,7 +162,8 @@
 
 .site-main .project-area{
     padding-left: 5%;
-    padding-top: 7%;
+    padding-top: 8%;
+    padding-bottom: 0%;
 }
 
 .site-main .project-area .button-group button{
@@ -176,16 +177,47 @@
     padding-left: 3rem;
 }
 
-.site-main .project-area .grid .our-project > .title h4{
-    font: normal 700 25px/12px var(--roboto);
+.site-main .project-area .grid .projects > .title h4{
+    font: normal 400 20px/12px var(--roboto);
 }
 
-.site-main .project-area .grid .our-project .img a:hover img{
+.site-main .project-area .grid .projects .img a:hover img{
     filter: brightness(1.1) drop-shadow(1px 8px 30px #b1afaf);
 }
 
+.site-main > .project-area .card{
+    background: rgba(230, 262, 272, 0.973);
+    padding: 2rem 0;
+    height: 16rem;
+    width: 16rem;
+    margin: 5rem .5rem;
+    transition: box-shadow .7s ease;
+    box-shadow: var(--box-shadow);
+}
 
-/* End Project Area */ 
+.project-card-title{
+    color: var(--primary-color);
+}
+
+/* Contact */
+.site-main .contact-area{
+    padding-top: 35%;
+    padding-bottom: 11%;
+}
+
+.site-main .contact-area .contact-social{
+    padding-top: 2%;
+}
+
+/* footer */
+.footer-area{
+    
+    padding-top: 0.1rem;
+    background-color: rgb(185, 220, 221);
+}
+
+
+
 
 
 
