--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,7 @@
 }
 
 .site-main > .project-area .card{
-    padding: 2rem 0;
+    padding-top: 2rem;
     height: 20rem;
     width: 20rem;
     margin: 5rem .5rem;
@@ -210,8 +210,18 @@
     text-align: center;
 }
 
+.proj-lang-icon{
+    color: blueviolet;
+}
+
+.proj-card{
+    margin-top: 0 !important;
+    margin-right: 0 !important;
+}
+
 .site-main .project-area .gitlink{
-    padding-top: 10%;
+    align-self: flex-end;
+    font-size: xx-large;
 }
 .project-card-title{
     margin-top: -2rem;
