port over old repo code

--- a/css/partials/variables.css
+++ b/css/partials/variables.css
@@ -10,8 +10,8 @@ html, body{
 /* CSS Variables */ 
 
 :root{
-    --primary-color: #142bfa;
-    --primary-color2: #11b9bf;
+    --primary-color: #061ef0;
+    --primary-color2: #4a3dff ;
     --title-color: #141313;
     --text-color: #777777;  
     --border-color: #201f1f17;  
